Changed: engine table files list only fields used by that engine to reduce their size and improve maintainability. Default entries for things, states, weapons, ammo and sounds are provided for tables that extend existing ones.
Changed: rewrote parts of the state editor so that the state list is a little bit more performant.
Fixed: the state animation preview now displays action names instead of code pointers for non-extended patches.
Fixed: a weapon's FireCGun and FirePlasma actions would only mark the extra muzzle flash state as used if the action was used on the first fire state.
Fixed: loading non-extended patches that try to set a codepointer on a state that originally had none will now display a warning. Thanks to Zodomaniac.
Fixed: saving a yet unsaved patch while exiting caused a crash. Thanks to TheStupidestBeing.
Fixed: BEX strings that do not appear in the engine selected for a patch will now not be visible in the strings editor, but will remain in the saved patch.
Fixed: fixed a wrong next state value in the MBF tables for S_GRENADE (968). Thanks to hawkwind3.

Version 1.2.4
-------------
Fixed: invalid sprite names no longer cause a crash when loading\creating a patch, but are ignored instead.
Fixed: changing miscellaneous values would result in a crash. Thanks to antares031, Xyzzy01.
Fixed: errors about setlocale for some users.

Version 1.2.3
-------------
Fixed: no longer allow a state's action to be removed in non-extended patches. Thanks to Mechadon.
Fixed: Boom configurations now properly refer to the red skullcard pickup string key as REDSKULL instead of REDSKUL. Thanks to EarthQuake.
Fixed: a crash on startup if the program settings became empty or corrupted somehow. Default settings will now be loaded if this is the case.
Changed: doubled size of sprite previews in the state editor.
Changed: updated wxPython to 4.0.6.
Changed: updated to Python 3.7.
Changed: enabled high DPI support.
Changed: reduced size of installed files.

Version 1.2.2