@@ -3,6 +3,8 @@ Version 1.3.0
 Changed: engine table files can now include base table files. This leads to smaller filesizes and makes for easier updating. As a result of this, strings in the Doom 1.9 and Ultimate Doom 1.9 tables are now keyed by their index.
 Changed: engine table files list only fields used by that engine to reduce their size and improve maintainability. Default entries for things, states, weapons, ammo and sounds are provided for tables that extend existing ones.
 Changed: rewrote parts of the state editor so that the state list is a little bit more performant.
+Changed: string editing for vanilla patches will allow any number of characters to be entered, but disallow using the new string if it is too long.
+Changed: better Linux compatibility. The application starts and is somewhat usable, but a number of UI issues still prevent it from working well.
 Fixed: the state animation preview now displays action names instead of code pointers for non-extended patches.
 Fixed: a weapon's FireCGun and FirePlasma actions would only mark the extra muzzle flash state as used if the action was used on the first fire state.
 Fixed: loading non-extended patches that try to set a codepointer on a state that originally had none will now display a warning. Thanks to Zodomaniac.
